# Polylib

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  ChangeLog.md  INSTALL  LICENSE  License.txt  Makefile.am  Makefile.in  Makefile_hand  NEWS  README  README.md  Readme.md  aclocal.m4  config.h.in  configure  configure.ac  index.html  make_setting.gnu  make_setting.intel  memo.txt  params.json  polylib-config.in
autom4te.cache/: output.1  requests  traces.0  traces.1
cmake/: CompileOptionSelector.cmake  FindPolylib.cmake  Toolchain_K.cmake  Toolchain_fx10.cmake  Toolchain_fx100.cmake  poly_package.cmake
doc/: CMakeLists.txt  Makefile.am  Makefile.in
doc/doxygen/: Doxyfile
docs/: Makefile.am  Makefile.in
examples/: #README#  CMakeLists.txt  CarGroup.cxx  CarGroup.h  Makefile  Makefile.am  Makefile.in  MyGroupFactory.cxx  MyGroupFactory.h  README  README.md  alltest.sh  mymain.cxx  polylib_config.tp  polylib_config_0_20130731174205.tpp  polylib_config_0_20130904094826.tp  polylib_config_0_20130904094853.tp  polylib_config_0_20130904111714.tp  polylib_config_0_20130904112432.tp  polylib_config_0_20130904113829.tp  polylib_config_1_20130904094826.tp  polylib_config_1_20130904094853.tp  polylib_config_1_20130904111218.tp  polylib_config_1_20130904111644.tp  polylib_config_1_20130904111918.tp  polylib_config_2_20130731174205.tpp  polylib_config_2_20130904094826.tp  polylib_config_2_20130904094853.tp  polylib_config_2_20130904111444.tp  polylib_config_2_20130904111529.tp  polylib_config_3_20130731174205.tpp  polylib_config_3_20130904094826.tp  polylib_config_3_20130904094853.tp  polylib_config_3_20130904111144.tp  polylib_config_3_20130904111445.tp  polylib_config_4_20130904111318.tp  polylib_config_5_20130904111108.tp  polylib_config_6_20130904111309.tp  polylib_config_7_20130904111145.tp  polylib_config_objfile.tp  (+29 more)
examples/config/: polylib_config-multi.tp  polylib_config.tp  polylib_config2.tp  polylib_config_0.tpp  polylib_config_1.tpp  polylib_config_move.tp  polylib_config_objfile.tp  polylib_config_objfile_bin.tp  polylib_config_vtxtest.tp  polylib_config_xyzrgb_statuette_stl.tp
examples/data/: blade2.stl  car.stl  sphere.stl  tower.stl
include/: MPIPolylib.h  Polylib.h  Version.h  Version.h.in  polyVersion.h  polyVersion.h.in
include/c_lang/: CMPIPolylib.h  CPolylib.h
include/common/: BBox.h  PolylibCommon.h  PolylibDefine.h  PolylibStat.h  Vec2.h  Vec3.h  axis.h  tt.h  vec3_func.h  vec3f_func.h
include/file_io/: PolylibConfig.h  TriMeshIO.h  obj.h  stl.h  triangle_id.h  vtk.h
include/groups/: PolygonGroup.h  PolygonGroupFactory.h
include/polygons/: DVertex.h  DVertexManager.h  DVertexTriangle.h  Polygons.h  PrivateTriangle.h  TriMesh.h  Triangle.h  VElement.h  VNode.h  VTree.h  VertKDT.h  VertKDTElem.h  VertKDTNode.h  Vertex.h  VertexList.h
include/util/: poly_time.h  time.h
src/: CMakeLists.txt  MPIPolylib.cxx  Makefile  Makefile.am  Makefile.in  Makefile_hand  Polylib.cxx  depend.inc
src/c_lang/: CMPIPolylib.cxx  CPolylib.cxx
src/common/: BBox.cxx
src/file_io/: TriMeshIO.cxx  obj.cxx  stl.cxx  triangle_id.cxx  vtk.cxx
src/groups/: PolygonGroup.cxx  PolygonGroupFactory.cxx
src/polygons/: DVertex.cxx  DVertexManager.cxx  DVertexTriangle.cxx  Polygons.cxx  PrivateTriangle.cxx  TriMesh.cxx  Triangle.cxx  VElement.cxx  VNode.cxx  VTree.cxx  VertKDT.cxx  VertKDTElem.cxx  VertKDTNode.cxx  Vertex.cxx  VertexList.cxx
src/util/: poly_time.cxx  time.cxx
vcproj/: polylib.sln  polylib_x32.bat
vcproj/polylib/: polylib.vcproj
vcproj/testmain/: testmain.vcproj
