##############################################################################
#
# Polylib - Polygon Management Library
#
# Copyright (c) 2010-2011 VCAD System Research Program, RIKEN. 
# All rights reserved.
# 
# Copyright (c) 2012-2013 Advanced Institute for Computational Science, RIKEN.
# All rights reserved.
#
##############################################################################

doc_includedir = $(prefix)/docs
doc_include_HEADERS = \
    $(top_builddir)/docs/refman.pdf \
    $(top_builddir)/docs/Polylib_UG.pdf